# ragtime

./: .env.example  README.md  pyproject.toml
corpus/: giraffes.txt  hippos.txt  monster_trucks.txt
ragtime/: celery_worker.py  crawl.py  embeddings_app.py  main.py
ragtime/lib/: celery_app.py  celery_tasks.py  documents.py  embeddings.py  model.py  output_parser.py  prompt.py
