[tool.poetry]
name = "ragtime"
version = "0.1.0"
description = "RAG pipeline using langchain and OpenAI"
authors = ["Andrew Candela <andrewcandela@Andrews-MacBook-Pro.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12, <3.13"
langchain = "^0.2.1"
langchain-openai = "^0.1.7"
chromadb = "^0.5.0"
langchain-community = "^0.2.1"
langchain-chroma = "^0.1.1"
langchainhub = "^0.1.16"
langserve = "^0.2.1"
sse-starlette = "^2.1.0"
pydantic = "1.10.13"
pypdf = "^4.2.0"
numpy = "^1.26.4"
langchain-postgres = "^0.0.6"
celery = {extras = ["redis"], version = "^5.4.0"}
gevent = "^24.2.1"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
threading-practice = {path = "../threading-practice"}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "ragtime.embeddings_app:main"
